update candidate_service unit test